--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
@@ -16,7 +16,36 @@
 
         {% block sw_settings_payment_sorting_modal_content_list %}
         <div class="sw-modal__body">
-            {# NEXT-20937 - place drag drop component here #}
+            <sw-sortable-list
+                class="sw-settings-payment-sorting-modal__payment-method-list"
+                :items="sortedPaymentMethods"
+                @itemsSorted="onSort"
+            >
+                {% block sw_settings_payment_sorting_modal_content_payment_method %}
+                <template #item="{ item: paymentMethod }">
+                    <div class="sw-settings-payment-sorting-modal__payment-method-list-item">
+                        {% block sw_settings_payment_sorting_modal_content_payment_method_action %}
+                        <sw-icon
+                            class="sw-settings-payment-sorting-modal__payment-method-list-item__action"
+                            small
+                            name="default-action-drag-horizontal"
+                        />
+                        {% endblock %}
+                        {% block sw_settings_payment_sorting_modal_content_payment_method_icon %}
+                        <sw-media-preview-v2
+                            class="sw-settings-payment-sorting-modal__payment-method-list-item__icon"
+                            :source="paymentMethod.media ? paymentMethod.media : null"
+                        />
+                        {% endblock %}
+                        {% block sw_settings_payment_sorting_modal_content_payment_method_name %}
+                        <div class="sw-settings-payment-sorting-modal__payment-method-list-item__name">
+                            {{ paymentMethod.translated.name }}
+                        </div>
+                        {% endblock %}
+                    </div>
+                </template>
+                {% endblock %}
+            </sw-sortable-list>
         </div>
         {% endblock %}
 
@@ -36,14 +65,16 @@
         {% endblock %}
 
         {% block sw_settings_payment_sorting_modal_footer_save_button %}
-        <sw-button
+        <sw-button-process
             class="sw-settings-payment-sorting-modal__save-button"
             variant="primary"
+            :is-loading="isSaving"
             :disabled="!acl.can('category.editor')"
+            :process-success="false"
             @click="applyChanges"
         >
             {{ $tc('global.default.save') }}
-        </sw-button>
+        </sw-button-process>
         {% endblock %}
 
     </template>
