NEXT-21001 - Apply address formatting for several places

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -148,7 +148,10 @@
                     </dt>
                     <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
                     <dd @click="onEditBillingAddress">
-                        <sw-address :address="billingAddress" />
+                        <sw-address
+                            :address="billingAddress"
+                            :formatting-address="formattingAddress"
+                        />
                     </dd>
                     {% endblock %}
 
