--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-preview-template-modal/sw-settings-country-preview-template-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-preview-template-modal/sw-settings-country-preview-template-modal.html.twig
@@ -3,7 +3,7 @@
     :title="$tc('sw-settings-country.detail.previewModalTitle')"
     @modal-close="onCancelShowPreview"
 >
-    <span v-html="previewAddress"></span>
+    <span v-html="displayFormattingAddress"></span>
 
     {% block sw_settings_country_preview_template_modal_footer %}
     <template #modal-footer>
