--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-address/sw-address.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-address/sw-address.html.twig
@@ -23,8 +23,20 @@
     {% endblock %}
 
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+    {% block sw_address_formatting %}
+        <div
+            v-if="formattingAddress"
+            class="sw-address__formatting"
+            v-html="displayFormattingAddress"
+        ></div>
+    {% endblock %}
+
+    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_address_body %}
-    <div class="sw-address__body">
+        <div
+            v-if="!formattingAddress"
+            class="sw-address__body"
+        >
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_address_company %}
         <div
