--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.scss
@@ -158,3 +158,9 @@
         padding: 0;
     }
 }
+
+.sw-bulk-edit-product-content-advanced-prices-modal {
+    .sw-product-detail-context-prices {
+        min-width: 100%;
+    }
+}
