NEXT-21546 - Added hover and disabled styles to sw-radio-field options

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-radio-field/sw-radio-field.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-radio-field/sw-radio-field.html.twig
@@ -16,7 +16,7 @@
                 v-for="(option, index) in options"
                 :key="index"
                 class="sw-field__radio-option group-bordered"
-                :class="{ 'sw-field__radio-option-checked': currentIndex === index }"
+                :class="{ 'sw-field__radio-option-checked': currentIndex === index, 'is--disabled': disabled || option.disabled }"
             >
 
                 <div class="sw-field__radio-input">
