NEXT-19245 - Refactor rule awareness

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
@@ -3,6 +3,7 @@
     <sw-entity-multi-select
         v-if="rules !== null"
         v-model="collection"
+        :criteria="ruleFilter"
         v-bind="$attrs"
     >
 
@@ -26,9 +27,9 @@
             >
                 <li
                     is="sw-select-result"
-                    v-tooltip="getTooltipConfig(item.id)"
+                    v-tooltip="tooltipConfig(item)"
                     :selected="isSelected(item)"
-                    :disabled="restrictedRules.includes(item.id)"
+                    :disabled="isRuleRestricted(item)"
                     v-bind="{ item, index }"
                     @item-select="addItem"
                 >
@@ -83,9 +84,9 @@
             >
                 <li
                     is="sw-select-result"
-                    v-tooltip="getTooltipConfig(item.id)"
+                    v-tooltip="tooltipConfig(item)"
                     :selected="isSelected(item)"
-                    :disabled="restrictedRules.includes(item.id)"
+                    :disabled="isRuleRestricted(item)"
                     v-bind="{ item, index }"
                     @item-select="setValue"
                 >
