--- a/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -192,9 +192,9 @@
                         :disabled="!acl.can('shipping.editor')"
                         required
                         :error="shippingMethodAvailabilityRuleIdError"
-                        :restriction="feature.isActive('FEATURE_NEXT_18215') ? 'shippingMethods' : ''"
                         :label="$tc('sw-settings-shipping.detail.topRule')"
                         class="sw-settings-shipping-detail__top-rule"
+                        rule-aware-group-key="shippingMethods"
                         @save-rule="onSaveRule"
                     />
                     {% endblock %}
